# DFKI_tests

./: .gitignore  README.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: CMakeLists.txt
src/tether_planner/: .clinerules  .gitignore  CMakeLists.txt  README.md  analyze_planner_data.py  compare_planner_runs.py  extract_bag_data.py  extract_stl_from_yaml.py  icra_paper_draft.md  inspect_bag_topics.py  package.xml  preprocess_data_to_csv.py  process_ros_txt_to_csv.py  refined_planner_description.txt  rviz_config.rviz  simulate_trajectory.py  transform_data.py
src/tether_planner/config/: planner_params.yaml  simulation_params.yaml  tether_params.yaml  transform_model.yaml
src/tether_planner/include/: collision_checker.hpp  global_vars.hpp  helper_functions.hpp  my_motion_validator.hpp  nvblox_functions.hpp  publishers.hpp  range.hpp  rope_rrt.hpp  tether_planner.hpp
src/tether_planner/input_data/: ImageToStl.com_dfki_pipe.pcd  ImageToStl.com_dfki_pipe.pcd:Zone.Identifier  convert_pcd.py  dfki_pipe - Copy.pcd  dfki_pipe - Copy.xyz  dfki_pipe.nvblx  dfki_pipe_21_5.pcd  dfki_pipe_21_5.xyz  dfki_pipe_fc.txt  dfki_pipe_fc1.txt  dfki_pipe_fc11.txt  dfki_pipe_fc_sip.txt  dfki_pipe_last.nvblx  dfki_pipe_sparse.pcd  dfki_pipe_with_legs.xyz  pipe.pcd:Zone.Identifier  pipe.xyz:Zone.Identifier  sip_plan.csv  test_pipe_dfki.pcd
src/tether_planner/launch/: rviz.launch  tether_planner.launch
src/tether_planner/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/tether_planner/nvblox/: CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
src/tether_planner/nvblox/atomic_configure/: local_setup.sh
src/tether_planner/nvblox/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/tether_planner/nvblox/catkin_generated/installspace/: rope_rrt.pc  rope_rrtConfig.cmake
src/tether_planner/nvblox/catkin_generated/stamps/rope_rrt/: package.xml.stamp
src/tether_planner/nvblox/devel/: .catkin  setup.sh
src/tether_planner/nvblox/devel/lib/pkgconfig/: rope_rrt.pc
src/tether_planner/nvblox/devel/share/rope_rrt/cmake/: rope_rrtConfig.cmake
src/tether_planner/nvblox/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tether_planner/nvblox/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tether_planner/nvblox/gtest/googletest/: CTestTestfile.cmake  Makefile
src/tether_planner/results/comparison/: comparison_analysis.md
src/tether_planner/src/: collision_checker.cpp  global_vars.cpp  helper_functions.cpp  my_motion_validator.cpp  nvblox_functions.cpp  publishers.cpp  tether_planner.cpp  tether_planner_main.cpp
(+3 files in other folders)
